# python-homework-server

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  authentication.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200430_0452.py  0003_auto_20200430_0456.py  0004_token.py  0005_auto_20200430_0503.py  0006_token_uid.py  0007_auto_20200430_0540.py  0008_remove_user_identifier.py  0009_auto_20200501_0619.py  0010_auto_20200501_0621.py  0011_auto_20200501_0622.py  0012_auto_20200501_0623.py  0013_auto_20200501_0625.py  0014_auto_20200501_0922.py  0015_auto_20200501_0947.py  0016_auto_20200501_2117.py  0017_auto_20200501_2119.py  0018_auto_20200501_2120.py  0019_auto_20200501_2147.py  0020_auto_20200502_0015.py  0021_auto_20200502_0407.py  0022_user_email_verified.py
accounts/template/: login_email_sent.html
accounts/tests/: test_authentication.py  test_models.py  test_views.py
deploy_tools/: fabfile.py  nginx.template.conf  redis-worker-systemd.template.service
exercises/: admin.py  config.py  forms.py  helper.py  models.py  queries.py  tasks.py  tests.py  urls.py  utils.py  views.py
exercises/migrations/: 0001_initial.py  0002_auto_20200511_0132.py  0002_delete_lol.py  0003_auto_20200422_2128.py  0003_auto_20200512_0147.py  0004_auto_20200422_2155.py  0004_auto_20200512_0501.py  0005_auto_20200423_1628.py  0005_auto_20200512_0840.py  0005_auto_20200512_1116.py  0006_auto_20200423_1735.py  0006_exercise_relevant.py  0006_merge_20200512_1118.py  (+28 more)
functional_tests/: .tests.py.swp  base.py  test_file_upload.py  test_file_upload_validation.py  test_layout_and_styling.py  test_login.py  test_page_logic.py  tests.py
testserver/: asgi.py  settings.py  urls.py  wsgi.py
(+19 files in other folders)
