[tool.poetry]
name = "test-server"
version = "0.1.0"
description = "Webservice for automatic grading of programming exercises"
authors = ["Michael Brauweiler <rattletat@posteo.me>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
flake8 = "^3.7.9"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
