[tool.poetry]
name = "test-server"
version = "0.1.0"
description = "Webservice for automatic grading of programming exercises"
authors = ["Michael Brauweiler <rattletat@posteo.me>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.5"
gunicorn = "^20.0.4"
python-magic = "^0.4.15"
markdown = "^3.2.1"
pygments = "^2.6.1"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
flake8 = "^3.7.9"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
